# learn

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  GIT_WORKFLOW.md  README.md  Vagrantfile  about.rst  advanced_ada.rst  bootstrap.sh  index.rst  intro_to_ada.md  intro_to_ada.rst  out.txt  requirements.txt  travis_install.sh  travis_script.sh
backend/: .flaskenv  .gitignore  REQUIREMENTS.txt  bootstrap.sh  celery_worker.py  dev.py  dev_server.sh  wsgi.py
books/: books.rst
content/: about.rst  conf.ini  contact.rst  global.txt  hidden.txt  hidden_contents.txt  index.rst
courses/: .lvimrc  courses.rst  index.rst
docs/: architecture.md
engine/: .eslintrc  .gitignore  Makefile  build-manifest.json  package.json  travis_install.sh  travis_script.sh  tsconfig.json  webpack.common.js  webpack.dev.js
frontend/: .babelrc  .eslintrc.js  .gitignore  .mocharc.json  Makefile  azw3_style.css  bootstrap.sh  eslint.config.js  mocha-webpack.opts  mocha.env  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  requirements_frozen.txt  (+13 more)
frontend/python/rst_code_example_pipeline/: README.md  pyproject.toml  pyrightconfig.json
frontend/python/rst_code_example_pipeline/src/rst_code_example_pipeline/: __init__.py  blocks.py  check_code_block.py  check_projects.py  colors.py  extract_projects.py  fmt_utils.py  toolchain.ini  toolchain_info.py  toolchain_setup.py
frontend/python/rst_code_example_pipeline/src/rst_code_example_pipeline/cli/: check.py  check_block.py  extract.py
frontend/python/rst_code_example_pipeline/tests/: test_smoke.py
(+1125 files in other folders)
