[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "rst-code-example-pipeline"
version = "0.2.0"
requires-python = ">=3.10"

[project.scripts]
learn-extract-code = "rst_code_example_pipeline.cli.extract:main"
learn-check-code   = "rst_code_example_pipeline.cli.check:main"
learn-check-block  = "rst_code_example_pipeline.cli.check_block:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
pythonVersion = "3.10"
